OS2: Expand all/Collapse all button issue #809776

--- a/styles.css
+++ b/styles.css
@@ -3281,7 +3281,6 @@ iframe.openstudio-content-view-iframe {
 
 /* Activity. */
 .openstudio-grid.openstudio-activity-cutting-edge {
-    border-top: 1px solid #dfdfdf;
     padding-top: 20px;
     margin-top: 0px;
 }
@@ -5129,7 +5128,8 @@ a.openstudio-add-new-content-link:hover  {
 .openstudio-expandcollapse:not(.expanded) a.openstudio-collapse,
 .openstudio-expandall.expanded #openstudio-expandall,
 .openstudio-expandall:not(.expanded) #openstudio-collapseall,
-.openstudio-grid.openstudio-activity-grid:not(.openstudio-expanded) {
+.openstudio-grid.openstudio-activity-grid:not(.openstudio-expanded),
+.openstudio-grid.openstudio-activity-cutting-edge:not(.openstudio-expanded) {
     display: none;
 }
 
@@ -5140,7 +5140,8 @@ a.openstudio-add-new-content-link:hover  {
     margin: 0;
 }
 
-.openstudio-grid.openstudio-activity-grid {
+.openstudio-grid.openstudio-activity-grid,
+.openstudio-grid.openstudio-activity-cutting-edge {
     transition: opacity 0.5s linear, height 0.5s ease-in-out;
 }
 
